# dotfiles

./: .zshrc  README.md
cmake/qt/: CMakeLists.txt
linux/: pulldown-debian.sh  root-debian-setup.sh  vbox-setup-debian.sh
linux/emacs/: spacemacs
linux/keyboard/: README  install-xcape.sh  pc-modified  startkeymod.sh
linux/tmux/: tmux.conf
linux/utils/: pulldown.sh
linux/vim/: vimplugins  vimrc
linux/zsh/: zshenv  zshrc
nvim/: vimrc
osx/: zshrc
osx/emacs/: spacemacs
osx/utils/: pulldown.sh
osx/vim/: vimrc
osx/zsh/: .zshrc.un~  zshenv  zshrc
utils/: pulldown.sh
youcompleteme/: ycm_extra_conf.py
